# payments-microservices

./: Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
docs/: PROCEDURES.md  REFERENCES.md
migrations/: env.py
migrations/versions/: 97725f2c71d3_create_user_table.py  a3d34c17c7d6_include_email_in_user_table.py
src/app/: __init__.py
src/app/controllers/: __init__.py  security.py
src/app/infrastructure/: app.py  database.py  exceptions.py  settings.py
src/app/models/: __init__.py  users.py
src/app/routers/: __init__.py  tokens.py  users.py
src/app/schemas/: __init__.py  token.py  users.py
