[tool.poetry]
name = "payments-microservices"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.19"
uvicorn = "^0.30.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.5.1"
ipdb = "^0.13.13"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
asyncio_mode = "auto"

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
run-dev = "fastapi dev src/app/application.py"
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"
build = "docker compose build --no-cache"
run = "docker compose up"
up = "docker compose build --no-cache && docker compose up"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
